--- a/currency-converter-service.properties
+++ b/currency-converter-service.properties
@@ -1,1 +1,2 @@
-link=http://localhost:8000/currency-exchange/from/{from}/to/{to}
+#link=http://localhost:8000/currency-exchange/from/{from}/to/{to}
+link=blah
